fix for GRAILS-4587